--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,2 +1,10 @@
 {% include head-custom-google-analytics.html %}
-<link rel="stylesheet" href="/assets/css/custom.css">
+<style>
+  body {
+    background: red !important; 
+  }
+  #banner {
+    display: none !important;
+  }
+</style>
+
