--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,10 +1,10 @@
 {% include head-custom-google-analytics.html %}
 <style>
-  body {
-    background: red !important; 
-  }
   #banner {
     display: none !important;
+  }
+  .warpper {
+    margin-top: 150px;
   }
 </style>
 
