--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -3,8 +3,12 @@
   #banner {
     display: none !important;
   }
+  header {
+    width: auto !important;
+    border-bottom: 20px !important;
+  }
   .wrapper {
-    margin-top: 150px;
+    margin-top: 150px !important;
   }
 </style>
 
