--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -5,10 +5,10 @@
   }
   header {
     width: auto !important;
-    border-bottom: 20px !important;
+    border-bottom: 25px solid transparent !important;
   }
   .wrapper {
-    margin-top: 150px !important;
+    margin-top: 120px !important;
   }
 </style>
 
