--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -5,7 +5,7 @@
   }
   header {
     width: auto !important;
-    border-bottom: 25px solid transparent !important;
+    padding-bottom: 25px !important;
   }
   .wrapper {
     margin-top: 120px !important;
