--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -8,7 +8,13 @@
     padding-bottom: 25px !important;
   }
   .wrapper {
-    margin-top: 100px !important;
+    margin-top: 150px !important;
+  }
+  section {
+    margin-top: 150px !important;
+  }
+  nav {
+    top: 180px !important;
   }
 </style>
 
